# MicTools

./: .appveyor.yml  .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
impl/: app.cpp  app.hpp  main.cpp  mic_controls.cpp  mic_controls.hpp  notifier.cpp  notifier.hpp  resources.hpp  toasts.cpp  toasts.hpp  tray.cpp  tray.hpp  types.hpp
resources/: icon.xcf  resources.rc
src/: main.cpp
